--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <!-- Логотип та навігаційне меню -->
-            <a href="">Зона</a>
+            <a href="">Zone</a>
             <ul>
                 <!-- Пункти навігаційного меню -->
-                <!-- <li><a href=""></a></li> -->
+                <!-- <li><a href="">Home</a></li> -->
                 <!-- Додайте аналогічні пункти для інших сторінок -->
             </ul>
         </nav>
@@ -23,7 +23,7 @@
             <!-- Контактна інформація -->
             <ul>
                 <!-- Елементи контактної інформації -->
-                <!-- <li><a href="mailto:"></a></li> -->
+                <!-- <li><a href="mailto:люба пошта">Люба пошта</a></li> -->
                 <!-- Додайте аналогічні елементи для інших контактів -->
             </ul>
         </address>
